force-app/main/default/objects/Churn_Training__c/Churn_Training__c.object-meta.xml
<CustomObject>
    <label>Churn Training</label>
    <pluralLabel>Churn Training Rows</pluralLabel>
    <nameField>
        <label>Training Row</label>
        <type>AutoNumber</type>
        <displayFormat>CT-{00000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>Point-in-time churn training snapshots for Einstein Studio Model Builder: features computed from order history BEFORE Ref_Date__c, label = no order within 60 days AFTER. One row per (customer, reference date).</description>
</CustomObject>