force-app/main/default/objects/Churn_Training__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <type>Lookup</type>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Churn Training Rows</relationshipLabel>
    <relationshipName>Churn_Training_Rows</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Customer</description>
</CustomField>