force-app/main/default/objects/Churn_Training__c/fields/Avg_Order_Value__c.field-meta.xml
<CustomField>
    <fullName>Avg_Order_Value__c</fullName>
    <label>Avg Order Value</label>
    <type>Number</type>
    <precision>12</precision>
    <scale>2</scale>
    <description>Average order value before ref date</description>
</CustomField>