force-app/main/default/objects/Churn_Training__c/fields/Cadence_Days__c.field-meta.xml
<CustomField>
    <fullName>Cadence_Days__c</fullName>
    <label>Cadence Days</label>
    <type>Number</type>
    <precision>9</precision>
    <scale>1</scale>
    <description>Average days between orders at ref date</description>
</CustomField>