force-app/main/default/objects/Churn_Training__c/fields/Churned__c.field-meta.xml
<CustomField>
    <fullName>Churned__c</fullName>
    <label>Churned</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
    <description>LABEL: true if no order within 60 days after ref date</description>
</CustomField>