force-app/main/default/objects/Churn_Training__c/fields/Days_Since_Last_Order__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Last_Order__c</fullName>
    <label>Days Since Last Order</label>
    <type>Number</type>
    <precision>9</precision>
    <scale>0</scale>
    <description>Recency at ref date</description>
</CustomField>