force-app/main/default/objects/Churn_Training__c/fields/Orders_Count__c.field-meta.xml
<CustomField>
    <fullName>Orders_Count__c</fullName>
    <label>Orders Count</label>
    <type>Number</type>
    <precision>9</precision>
    <scale>0</scale>
    <description>Orders before ref date</description>
</CustomField>