force-app/main/default/objects/Churn_Training__c/fields/Orders_Last_30d__c.field-meta.xml
<CustomField>
    <fullName>Orders_Last_30d__c</fullName>
    <label>Orders Last 30d</label>
    <type>Number</type>
    <precision>9</precision>
    <scale>0</scale>
    <description>Momentum: orders in the 30 days before ref date</description>
</CustomField>