force-app/main/default/objects/Churn_Training__c/fields/Ref_Date__c.field-meta.xml
<CustomField>
    <fullName>Ref_Date__c</fullName>
    <label>Ref Date</label>
    <type>Date</type>
    <description>Snapshot reference date; features use only orders before this date</description>
</CustomField>