force-app/main/default/objects/Churn_Training__c/fields/Tenure_Days__c.field-meta.xml
<CustomField>
    <fullName>Tenure_Days__c</fullName>
    <label>Tenure Days</label>
    <type>Number</type>
    <precision>9</precision>
    <scale>0</scale>
    <description>Days since first order at ref date</description>
</CustomField>