force-app/main/default/objects/Churn_Training__c/fields/Total_Spend__c.field-meta.xml
<CustomField>
    <fullName>Total_Spend__c</fullName>
    <label>Total Spend</label>
    <type>Number</type>
    <precision>12</precision>
    <scale>2</scale>
    <description>Total spend before ref date (plain number to avoid currency machinery)</description>
</CustomField>