force-app/main/default/objects/Churn_Training__c/fields/Web_Days_Since_Seen__c.field-meta.xml
<CustomField>
    <fullName>Web_Days_Since_Seen__c</fullName>
    <label>Web Days Since Seen</label>
    <type>Number</type>
    <precision>9</precision>
    <scale>0</scale>
    <description>Days since last web activity at ref date (9999 if never)</description>
</CustomField>