force-app/main/default/objects/Churn_Training__c/fields/Web_Dwell_Total__c.field-meta.xml
<CustomField>
    <fullName>Web_Dwell_Total__c</fullName>
    <label>Web Dwell Total</label>
    <type>Number</type>
    <precision>12</precision>
    <scale>0</scale>
    <description>Total dwell seconds before ref date</description>
</CustomField>