force-app/main/default/objects/Churn_Training__c/fields/Web_Events_30d__c.field-meta.xml
<CustomField>
    <fullName>Web_Events_30d__c</fullName>
    <label>Web Events 30d</label>
    <type>Number</type>
    <precision>9</precision>
    <scale>0</scale>
    <description>Web engagement events in 30d before ref date</description>
</CustomField>